added category in swagger
