# internal/model/category.go
@@ -1,6 +1,6 @@
 package model
 
-type Сategory struct {
+type Category struct {
 	Id           uint   `json:"id"`
 	Name         string `json:"name" validate:"required,max=255"`
 	RestaurantId uint   `json:"restaurant_id"`
