# internal/model/food.go
@@ -7,7 +7,7 @@ type Food struct {
 	RestaurantId uint      `json:"restaurant_id"`
 	Name         string    `json:"name" validate:"required,max=255"`
 	CategoryId   uint      `json:"category-id"`
-	Category     Сategory  `json:"category"`
+	Category     Category  `json:"category"`
 	Description  string    `json:"description"`
 	Price        int       `json:"price" validate:"required"`
 	InStock      bool      `json:"in_stock"`
